# bindings

./: README.md
c_to_cpp/: CMakeLists.txt  README.md
c_to_cpp/src/: larc.cpp  larc.h
c_to_cpp/tests/: main.c
kotlin_native_to_c/: CMakeLists.txt  README.md
kotlin_native_to_c/src/: main.kt
kotlin_native_to_cpp/: CMakeLists.txt  README.md  ktcpp.def
kotlin_native_to_cpp/src/: ktcpp.cpp  ktcpp.h
kotlin_native_to_cpp/test_cpp/: main.cpp
kotlin_native_to_cpp/test_kotlin/: main.kt
kotlin_native_to_rust/: Cargo.toml  README.md
kotlin_native_to_rust/kotlin/: Makefile  ktr.def  main.kt
kotlin_native_to_rust/src/: lib.rs
lib_example/: Makefile  README.md
lib_example/src/: hello.cpp  hello.h
liblar_cpp/: CMakeLists.txt  README.md
liblar_cpp/src/: lar.cpp  lar.h
liblar_cpp/tests/: main.cpp
rust_to_c/: Cargo.toml  Makefile  README.md  build.rs
rust_to_c/src/: main.rs
swig_to_c/: Makefile  README.md
swig_to_c/java/: Main.java
swig_to_c/perl/: hellob_test.pl  lar_test.pl
swig_to_c/python/: hellob_test.py  lar_test.py
swig_to_c/swig/: hellob.i  lar.i  lar_java.i  lar_perl.i  lar_python.i
wrap_example/: Makefile  README.md
wrap_example/src/: hellob.cpp  hellob.h
